- Fixed Bug #39313 spl_autoload triggers Fatal error

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@222612 c90b9560-bf6c-de11-be94-00142212c4b1