ext/spl/php_spl.h
@@ -58,6 +58,7 @@ PHP_MINFO_FUNCTION(spl);
 ZEND_BEGIN_MODULE_GLOBALS(spl)
 	char *       autoload_extensions;
 	HashTable *  autoload_functions;
+	int          autoload_running;
 ZEND_END_MODULE_GLOBALS(spl)
 
 #ifdef ZTS
